# backend/src/routes/chat.routes.ts
@@ -2,7 +2,9 @@ import { Router } from "express";
 import { chatbotController } from "../controllers/chatbot.controller";
 
 const router = Router();
+
 // POST /api/chat
-router.post("/", chatbotController.askChat); // Akses: /api/chat
+// Payload body: { "message": "Bagaimana kondisi mesin M-14850?" }
+router.post("/", chatbotController.askChat);
 
 export default router;
